refactor: convert identity to keycloak